pricing items spacing fixed
Former-commit-id: 2fa62e296813fd4ca7bd4e5e76721b436ad62535 [formerly 61efbd2c6b0ad8fb8c8a42d1730cdd2e0595f17b]
Former-commit-id: 9001c2809c15c350c6bf7eab02b3f30fa57fecf7

--- a/src/styles/WaitlistDashboard/pricing.module.scss
+++ b/src/styles/WaitlistDashboard/pricing.module.scss
@@ -109,7 +109,6 @@
           .description {
             margin-top: 6px;
             font-size: 14px;
-            font-size: 500;
             color: #ffffff;
 
             text-align: center;
@@ -273,7 +272,6 @@
             .description {
               margin-top: 6px;
               font-size: 14px;
-              font-size: 500;
               color: #ffffff;
 
               text-align: center;
@@ -336,7 +334,7 @@
   }
 }
 
-@media only screen and (max-width: 860px) {
+@media only screen and (orientation: portrait) and (max-width: 860px) {
   .leaderboard {
     height: 100vh;
     width: 100vw;
@@ -438,7 +436,6 @@
             .description {
               margin-top: 6px;
               font-size: 14px;
-              font-size: 500;
               color: #ffffff;
 
               text-align: center;
@@ -603,7 +600,6 @@
             .description {
               margin-top: 6px;
               font-size: 14px;
-              font-size: 500;
               color: #ffffff;
 
               text-align: center;
@@ -658,6 +654,170 @@
             &:nth-child(2) {
               background: #ff6263;
               margin: 0 0px 40px;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+@media only screen and (orientation: landscape) and (max-height: 600px) {
+  .leaderboard {
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    overflow: auto;
+    .curve2 {
+      position: fixed;
+      width: 100vw;
+      left: 0;
+      top: 60%;
+      z-index: -1;
+      transform: scaleX(-1);
+      animation: moveit 5s ease alternate infinite;
+      animation-delay: 2s;
+    }
+    .curve1 {
+      position: fixed;
+      width: 100vw;
+      left: 0;
+      top: 25%;
+      z-index: -1;
+      animation: moveit 5s ease alternate infinite;
+    }
+    .contentWrapper {
+      height: 100vh;
+      flex: 1;
+      display: flex;
+      width: 100%;
+      overflow: auto;
+      flex-direction: column;
+      .mainContent {
+        width: 100%;
+        padding: 0 40px;
+        margin-top: 20px;
+        .heading {
+          margin-top: 30px;
+          font-size: 32px;
+          font-weight: 900;
+          text-align: center;
+        }
+        .featurewrapper {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          margin-top: 40px;
+          width: 100%;
+          .feature {
+            display: flex;
+            align-items: center;
+            width: 300px;
+            font-weight: 600;
+            font-size: 14px;
+            text-align: center;
+            justify-content: center;
+            &:nth-child(2) {
+              margin: 0 20px;
+            }
+            .tick {
+              width: 14px;
+              margin-right: 10px;
+              path {
+                fill: #4166eb;
+              }
+            }
+          }
+        }
+        .pricewrapper {
+          display: flex;
+          align-items: baseline;
+          justify-content: center;
+          flex-wrap: wrap;
+          width: 100%;
+          margin-top: 40px;
+          .pricecontainer {
+            width: auto;
+            height: fit-content;
+            left: 244px;
+            top: 495px;
+            background: #ffffff;
+            border: 1px solid #dbdbdb;
+            box-sizing: border-box;
+            box-shadow: 0px 4px 5px 1px rgba(193, 193, 193, 0.35);
+            border-radius: 12px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            margin-bottom: 40px;
+            color: #ffffff;
+            padding: 12px;
+            .name {
+              font-weight: 700;
+              font-size: 18px;
+            }
+            .price {
+              margin-top: 12px;
+              font-size: 36px;
+              font-weight: 800;
+            }
+            .description {
+              margin-top: 6px;
+              font-size: 12px;
+              color: #ffffff;
+              text-align: center;
+              width: 200px;
+              height: 30px;
+            }
+            .button {
+              border: 3px solid #4166eb;
+              border-radius: 3px;
+              padding: 15px 0;
+              display: flex;
+              align-items: center;
+              justify-content: center;
+              width: 100%;
+              color: #4166eb;
+              font-size: 14px;
+              font-weight: 700;
+              margin-top: 30px;
+              transition: all 0.3s ease;
+              cursor: pointer;
+              &:hover {
+                background-color: #4166eb;
+                color: white;
+              }
+            }
+            .hr {
+              height: 1px;
+              margin-top: 20px;
+              width: 40%;
+              border-bottom: 1px solid #dddddd;
+            }
+            .benefitswrapper {
+              margin-top: 20px;
+              display: flex;
+              flex-direction: column;
+              align-items: center;
+              max-width: 180px;
+              p {
+                font-size: 10px;
+                font-weight: 500;
+                color: #ffffffe7;
+
+                margin-bottom: 12px;
+              }
+            }
+            &:first-child {
+              background-color: #17d1bc;
+            }
+            &:last-child {
+              background-color: #4166eb;
+            }
+            &:nth-child(2) {
+              background: #ff6263;
+
+              margin: 0 20px 40px;
             }
           }
         }
